# wgpu-intro

./: Cargo.toml  README.md  TESTING.md  index.html
.github/workflows/: deploy.yml
src/: game.rs  lib.rs  main.rs  shader.wgsl
tests/: browser_compatibility.rs  webgl_compatibility.rs
